PostGIS 1.5.8
2012/xx/xx

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.7 release.

 - Bug Fixes
   - #2048, ST_Within and ST_CoveredBy producing bad results


PostGIS 1.5.7
2012/10/31

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.6 release.

 - Bug Fixes
   - #2071, Add PgSQL 9.2 support

PostGIS 1.5.6
2012/10/31

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.5 release.

 - Bug Fixes
   - #547, ST_Contains memory problems, the remake 
   - #1957, ST_Distance to a one-point LineString returns NULL
   - #1936, ST_GeomFromGML on CurvePolygon causes server crash
   - #1953, Segfault on GEOS calls with empty polygon
   - #1976, Geography point-in-ring code overhauled for more reliability
   - #2071, Add PgSQL 9.2 support


PostGIS 1.5.5
2012/07/20

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.4 release.

 - Bug Fixes
   - #1825, containsproperly fix in prepared geometry.
   - #1832, crash when updating GIST index on geography column
   - #1865, don't strip comments COPY data from dumps on restore


PostGIS 1.5.4
2012/05/06

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.3 release.

 - Bug Fixes
   - #547, ST_Contains memory problems (Sandro Santilli)
   - #621, Problem finding intersections with geography (Paul Ramsey)
   - #627, PostGIS/PostgreSQL process die on invalid geometry (Paul Ramsey)
   - #810, Increase accuracy of area calculation (Paul Ramsey)
   - #852, improve spatial predicates robustness (Sandro Santilli, Nicklas Avén)
   - #877, ST_Estimated_Extent returns NULL on empty tables (Sandro Santilli)
   - #1028, ST_AsSVG kills whole postgres server when fails (Paul Ramsey)
   - #1056, Fix boxes of arcs and circle stroking code (Paul Ramsey)
   - #1121, populate_geometry_columns using deprecated functions (Regin Obe
     , Paul Ramsey)