@@ -488,15 +488,9 @@ AddToPROJ4SRSCache(PROJ4PortalCache *PROJ4Cache, int srid, int other_srid)
 	}
 
 	projection = make_project(proj_str);
-
-	pj_errno_ref = pj_get_errno_ref();
-	if ( (projection == NULL) || (*pj_errno_ref))
+	if ( ! projection )
 	{
-		char *pj_errstr = "";
-		if ( pj_strerrno(*pj_errno_ref) )
-			pj_errstr = pj_strerrno(*pj_errno_ref);
-			
-		elog(ERROR, "AddToPROJ4SRSCache: couldn't parse proj4 string: '%s': %s", proj_str, pj_errstr);
+		elog(ERROR, "AddToPROJ4SRSCache: couldn't parse proj4 string: '%s'", proj_str);
 	}
 
 	/*
